--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,39 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg ">
+    <div class="container-fluid px-4">
+        <a class="navbar-brand" routerLink="/">MovieApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-2 ms-auto mb-2 mb-lg-0 gap-2">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <span>{{selected_lang}}</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end   w-auto">
+                        @for(other_lang of lang; track other_lang) {
+                        @if(other_lang !== selected_lang) {
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center gap-2">
+                                <span>{{other_lang}}</span>
+                            </a>
+                        </li>
+                        }
+                        }
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="/watchlist"
+                        routerLinkActive="active_route" [routerLinkActiveOptions]="{ exact: true }">
+                        <i class="fa-solid fa-heart"></i>
+                        WatchList
+                    </a>
+                </li>
+
+
+            </ul>
+        </div>
+    </div>
+</nav>
