--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,6 +7,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-2 ms-auto mb-2 mb-lg-0 gap-2">
+                @if(isHomeRoute())
+                {
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
@@ -24,6 +26,8 @@
                         }
                     </ul>
                 </li>
+                }
+
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="/watchlist"
                         routerLinkActive="active_route" [routerLinkActiveOptions]="{ exact: true }">
