--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,19 @@
 div {
   background-color: #f3f1f1;
 }
+div.search input {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  outline: none;
+  font-size: 14px;
+}
+button {
+  background-color: #ffe353;
+  border-radius: 10px;
+  width: 120px;
+  height: 46px;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+}
