--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
-<div>
-    <h1>Welcome to our movie app</h1>
-    <p>Millions of movies, TV shows and people to discover. Explore now</p>
-    <div class="search">
-        <input type="text" placeholder="Search for a movie, tv show, person..." />
-        <button>Search</button>
+<div class="mt-3 p-5">
+    <h1 class="my-4">Welcome to our movie app</h1>
+    <p class="mb-3">Millions of movies, TV shows and people to discover. Explore now</p>
+    <div class="search d-flex gap-2">
+        <input type="text" placeholder="Search for a movie, tv show, person..." class="d-block col-9 p-2 " />
+        <button class="d-block">Search</button>
     </div>
 </div>
