--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,1 +1,18 @@
-<p>movie-card works!</p>
+<div class="col ">
+    <div>
+        <div class=" image-container">
+            <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" class="card-img-top" alt="...">
+        </div>
+        <div class="d-flex  px-2 justify-content-between align-items-baseline   ">
+            <div>
+                <h5>{{ movie.title }}</h5>
+                <p>{{ movie.release_date }}</p>
+            </div>
+            <a href="# " class=" d-block text-end">
+                <i class="fa-solid fa-heart"></i>
+            </a>
+
+
+        </div>
+    </div>
+</div>
