--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,4 +1,9 @@
-<div class="container">
+<h2 class="my-5">Now Playing</h2>
+<div class="row row-cols-lg-6 row-cols-md-4 row-cols-2 g-2 my-3 px-2 ">
 
-    <app-movie-card> </app-movie-card>
+    @for ( movieItem of movies; track movieItem.id)
+    {
+
+    <app-movie-card [movie]="movieItem"> </app-movie-card>
+    }
 </div>
