--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,6 +1,11 @@
 <div class="col ">
+
     <div>
         <div class=" image-container">
+            <a class="detail" [routerLink]="['/moive-details', movie.id]">
+                <i class="fa-solid fa-ellipsis-h"></i>
+
+            </a>
             <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" class="card-img-top" alt="...">
         </div>
         <div class="d-flex  px-2 justify-content-between align-items-baseline   ">
@@ -9,7 +14,7 @@
                 <p>{{ movie.release_date }}</p>
             </div>
             <a href="# " class=" d-block text-end">
-                <i class="fa-solid fa-heart"></i>
+                <i class="fa-solid fa-heart notin-watchlist"></i>
             </a>
 
 
