--- a/src/app/movie-card/movie-card.component.css
+++ b/src/app/movie-card/movie-card.component.css
@@ -17,18 +17,15 @@ div.col p {
   font-size: 14px;
   color: #888;
 }
-/* div.col i {
-  color: #ffe353;
-} */
+div.col i {
+  font-size: 16px;
+  margin-top: 5px;
+}
 .in-watchlist {
   color: #ffe353;
-  font-size: 14px;
-  margin-top: 5px;
 }
 .notin-watchlist {
   color: black;
-  font-size: 14px;
-  margin-top: 5px;
 }
 .detail {
   background-color: rgba(128, 128, 128, 0.384);
@@ -43,4 +40,53 @@ div.col p {
   text-decoration: none;
   color: rgb(250, 248, 248);
   cursor: pointer;
+}
+
+.progress-circle {
+  position: absolute;
+  bottom: -5px;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+  background: #081c22;
+  border-radius: 50%;
+  padding: 2px;
+}
+
+.progress-circle svg {
+  width: 100%;
+  height: 100%;
+  transform: rotate(-90deg);
+}
+
+.progress-circle path {
+  fill: none;
+  stroke-width: 3;
+  stroke-linecap: round;
+}
+
+.progress-circle path:first-child {
+  stroke: #204529;
+}
+
+.progress-circle path:last-child {
+  stroke: #21d07a;
+}
+
+.progress-circle.yellow path:last-child {
+  stroke: #d2d531;
+}
+
+.progress-circle.red path:last-child {
+  stroke: #db2360;
+}
+
+.rating {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
 }
