--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,12 +1,18 @@
-<div class="col ">
-
+<div class="col">
     <div>
-        <div class=" image-container">
+        <div class="image-container position-relative">
             <a class="detail" [routerLink]="['/moive-details', movie.id]">
                 <i class="fa-solid fa-ellipsis-h"></i>
-
             </a>
             <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" class="card-img-top" alt="...">
+            <div class="progress-circle" [ngClass]="getRatingColor(movie.vote_average)">
+                <svg viewBox="0 0 36 36">
+                    <path d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" />
+                    <path [attr.stroke-dasharray]="getStrokeDashArray(movie.vote_average)"
+                        d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" />
+                </svg>
+                <div class="rating">{{ movie.vote_average | number:'1.1-1' }}</div>
+            </div>
         </div>
         <div class="d-flex  px-2 justify-content-between align-items-baseline   ">
             <div>
@@ -16,8 +22,6 @@
             <a href="# " class=" d-block text-end">
                 <i class="fa-solid fa-heart notin-watchlist"></i>
             </a>
-
-
         </div>
     </div>
 </div>
