--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,7 +18,8 @@
                         @for(other_lang of lang; track other_lang) {
                         @if(other_lang !== selected_lang) {
                         <li>
-                            <a class="dropdown-item d-flex align-items-center gap-2">
+                            <a class="dropdown-item d-flex align-items-center gap-2"
+                                (click)="changeLanguage(other_lang)">
                                 <span>{{other_lang}}</span>
                             </a>
                         </li>
