update header to be responsive

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,6 @@
     <p class="mb-3">Millions of movies, TV shows and people to discover. Explore now</p>
     <div class="search d-flex gap-2">
         <input type="text" placeholder="Search for a movie, tv show, person..." class="d-block col-9 p-2 " />
-        <button class="d-block">Search</button>
+        <button class="d-block col-3">Search</button>
     </div>
 </div>
