--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,1 +1,44 @@
-<p>movie-details works!</p>
+@if (movieDetails) {
+<div class="container mt-5">
+    <div class="row p-5 movieBackGround "
+        [style.backgroundImage]="'linear-gradient(to right, rgba(70, 30, 100, 0.9) calc((50vw - 170px) - 340px), rgba(30, 60, 120, 0.7) 50%, rgba(120, 30, 80, 0.5) 100%), url(https://image.tmdb.org/t/p/original' + movieDetails.backdrop_path + ')'">
+        <div class="col-md-3">
+            <div class="movie-poster ">
+                <img src="https://image.tmdb.org/t/p/w300{{movieDetails.poster_path}}" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="movie-card text-light " style="background-color:   transparent;">
+                <h2>{{movieDetails.title}}</h2>
+                <p class="text-light">{{ movieDetails.release_date | date }}</p>
+
+                <div class="rounded-pill"> {{ (movieDetails.vote_average * 10) | number:'1.0-0'}}<sup>
+                        <small>%</small></sup>
+                </div>
+
+                <p>{{movieDetails.overview}}</p>
+                <div class="mb-3">
+                    @for (genre of movieDetails.genres; track $index) {
+                    <span class=" me-2 btn-category ">{{genre.name}}</span>
+                    }
+                </div>
+                <p><strong>Duration:</strong> {{movieDetails.runtime}} Min. |
+
+                    <strong>Language:</strong>
+                    {{movieDetails.original_language|languageName}}
+                </p>
+                @for (company of movieDetails.production_companies; track $index) {
+                @if (company.logo_path&&$index<4) { <img src="https://image.tmdb.org/t/p/w200{{company.logo_path}}"
+                    [alt]="company.name" class="img-fluid me-3 " style="max-height: 60px;">
+
+                    }
+                    }
+
+            </div>
+        </div>
+    </div>
+</div>
+}@else {
+
+Not Found
+}
