watchlist and its functionality

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -20,7 +20,7 @@
                 <p>{{ movie.release_date }}</p>
             </div>
             <a href="# " class=" d-block text-end">
-                <i class="fa-solid fa-heart notin-watchlist"></i>
+                <i class="fa-solid fa-heart notin-watchlist" (click)="AddToWatchlist()" ></i>
             </a>
         </div>
     </div>
