--- a/src/app/movie-details/movie-details.component.css
+++ b/src/app/movie-details/movie-details.component.css
@@ -1,7 +1,5 @@
 .movie-card {
-  background: #fff;
-  border-radius: 10px;
-  padding: 20px;
+  padding: 25px;
 }
 
 .movie-poster img {
@@ -10,7 +8,7 @@
 }
 
 .btn-category {
-  background: #ffd700;
+  background: #ffe353;
   border: none;
   color: black;
   padding: 5px 15px;
@@ -20,7 +18,6 @@
 .movieBackGround {
   background-size: cover;
   background-position: center;
-  border-radius: 10px;
 }
 
 .image-container {
