--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,8 @@
-<p>not-found works!</p>
+<div class="not-found-page text-center my-5">
+    <div class="not-found-icon mb-4">
+        <i class="fas fa-exclamation-circle"></i>
+    </div>
+    <h2 class="mb-3">Not Found Error 404</h2>
+    <p class="lead mb-4">Oops! The page you’re looking for doesn’t exist.</p>
+    <a href="/" class="btn ">Back to Home</a>
+</div>
