--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,6 +1,6 @@
 <div class="col">
-    <div [routerLink]="['/movie-details', movie.id]">
-        <div class=" image-container position-relative">
+    <div>
+        <div class=" image-container position-relative" [routerLink]="['/movie-details', movie.id]">
             <a class="detail" [routerLink]="['/movie-details', movie.id]">
                 <i class="fa-solid fa-ellipsis-h"></i>
             </a>
@@ -17,11 +17,21 @@
         <div class="d-flex  px-2 justify-content-between align-items-baseline   ">
             <div>
                 <h5>{{ movie.title }}</h5>
-                <p>{{ movie.release_date }}</p>
+                <p>{{ movie.release_date |date }}</p>
             </div>
-            <a href="# " class=" d-block text-end">
-                <i class="fa-solid fa-heart notin-watchlist" (click)="AddToWatchlist()"></i>
-            </a>
+            @if(isInWatchlist()){
+            <span class=" d-block text-end ">
+                <i class="fa-solid fa-heart in-watchlist"></i>
+            </span>
+            }
+            @else
+            {
+            <span class="material-symbols-outlined" (click)="AddToWatchlist()">
+                favorite
+            </span>
+            }
+
+
         </div>
     </div>
 </div>
