Add Toggle watchlist button

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
-<div class="  p-5  " style=" background-color: #ffe353; border-radius: 0px;  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);">
+<div class="  p-5 mt-5  "
+    style=" background-color: #ffe353; border-radius: 0px;  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);">
     <div class="row align-items-center mb-4">
         <div class="col-md-6">
             <h6 class="fw-bold text-uppercase mb-3">Download Our App</h6>
