--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -27,6 +27,10 @@ button {
   font-size: 14px;
   transition: all 0.3s ease;
 }
+button:hover {
+  background-color: #ebcd3a;
+  color: #000;
+}
 
 /* Tablet devices */
 @media (max-width: 768px) {
