--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -57,6 +57,14 @@
             </div>
         </div>
     </div>
+    <br />
+    <h2 class="my-2">Recommendations</h2>
+    <div class="row row-cols-lg-6 row-cols-md-4 row-cols-2 g-2 my-3 px-2 shadow ">
+        @for (movieItem of moviesRecommendations.results; track $index) {
+        @if ($index<6){ <app-movie-card [movie]=" movieItem"></app-movie-card>
+            }
+            }
+    </div>
     <div>
         @if (movieReviews.results.length > 0) {
         @for (movieReview of movieReviews.results; track $index) {
@@ -73,9 +81,14 @@
 
         }
     </div>
+
+
+
+
+
 </div>
 }@else if (!movieDetails) {
-<app-not-found></app-not-found>
+
 
 }
 }
