--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="mt-3 p-5">
-    <h1 class="my-4">Welcome to our movie app</h1>
-    <p class="mb-3">Millions of movies, TV shows and people to discover. Explore now</p>
-    <div class="search d-flex gap-2">
+  <h1 class="my-4">Welcome to our movie app</h1>
+  <p class="mb-3">Millions of movies, TV shows and people to discover. Explore now</p>
+  <div class="search d-flex gap-2">
     <input type="text" class="form-control" [(ngModel)]="searchQuery" placeholder="Search and explore..."
-           (keydown.enter)="onSearch()">
+      (keydown.enter)="onSearch()">
     <button class="btn" (click)="onSearch()">Search</button>
   </div>
 </div>
@@ -11,15 +11,16 @@
 <div *ngIf="searchResults.length > 0; else noResults" class="search-results mt-3">
   <h5><strong>Search Results for: </strong>{{ searchQuery }}</h5>
   <div class="row">
-    <div class="col-md-3 mb-4" *ngFor="let movie of searchResults">
-      <div class="card">
-        <img [src]="imgBaseUrl + movie.poster_path" class="card-img-top" alt="movie poster" />
-        <div class="card-body">
-          <h5 class="card-title">{{ movie.title }}</h5>
-          <p class="card-text">{{ movie.release_date | date }}</p>
-        </div>
-      </div>
+    @for (movie of searchResults; track $index) {
+    @if (movie.poster_path) {
+    <div class="col-md-3 mb-4">
+
+      <app-movie-card [movie]="movie"></app-movie-card>
     </div>
+
+    }
+    }
+
   </div>
 </div>
 
