--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,7 +1,7 @@
 <div class="col">
     <div>
         <div class=" image-container position-relative" [routerLink]="['/movie-details', movie.id]">
-            <a class="detail" [routerLink]="['/movie-details', movie.id]">
+            <a class="detail" href="movie-details/{{movie.id}}">
                 <i class="fa-solid fa-ellipsis-h"></i>
             </a>
             <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" class="card-img-top" alt="...">
