--- a/src/app/watch-list/watch-list.component.css
+++ b/src/app/watch-list/watch-list.component.css
@@ -44,14 +44,20 @@
   cursor: pointer;
   position: absolute;
   top: 50px;
-  right: 35px;
+
   font-size: 25px;
   z-index: 99;
+}
+.right {
+  right: 35px;
+}
+.left {
+  left: 35px;
 }
 .progress-circle {
   position: absolute;
   top: 18px;
-  right: 20px;
+  /* right: 20px; */
   width: 40px;
   height: 40px;
   background: #081c22;
